rimozione hard-code

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,12 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+PROXY_PREFIX=
+
+NEXTCLOUD_BASE_URI=
+NEXTCLOUD_USERNAME=
+NEXTCLOUD_PASSWORD=
+NEXTCLOUD_PREFIX=
+
+API_KEY_CHATGPT=
